# web_project

./: .env.example  Dockerfile.django_admin  Dockerfile.elastic  Dockerfile.etl  Dockerfile.flask  Procfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  script.sql  setup.cfg
.github/workflows/: code-checker.yaml
config/: .env.example  settings.py  urls.py
config/components/: database.py
config/settings/: base.py  dev.py  production.py
django_admin/config/: asgi.py  urls.py  wsgi.py
django_admin/config/settings/: base.py  dev.py  production.py
django_admin/videos/: admin.py  apps.py  models.py  tests.py  views.py
django_admin/videos/migrations/: 0001_initial.py
docker_files/: Dockerfile.django_admin
etl/: .env_etl.example  backoff_function.py  cfg.py  connect.py  database_query.py  etl_class.py  etl_process.py  inserting_test_data.py  log.py  models.py  state_storage.py  video_converter.py
etl/settings/secrets/: secrets_example
flask_application/: flask_models.py  for_elastic_search.py  main.py  models.py
flask_application/static/: styles.css
flask_application/templates/: all_videos.html  base.html  video_display.html  videos_by_id.html
src/: Dockerfile.django_admin  Dockerfile.etl  Dockerfile.flask  nginx.conf  site.conf
src/schemas_elastic_search/: ru_schemas.json
videos/: admin.py  apps.py  models.py  tests.py  views.py
videos/locale/en/LC_MESSAGES/: django.po
videos/locale/ru/LC_MESSAGES/: django.mo  (+1 more)
videos/migrations/: 0001_initial.py  0002_alter_audioandtext_lang_alter_audioandtext_video_and_more.py
(+4 files in other folders)
