[tool.poetry]
name = "web_project"
version = "0.1.0"
description = "Поглядим"
authors = ["vlada <vladasabelnikova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "2.9.3"
python-dotenv = "0.19.2"
django = "4.0.3"
django-split-settings = "1.1.0"
django-debug-toolbar = "3.2.4"
gunicorn = "20.1.0"
redis = "4.2.2"
pydantic = "1.9.0"
elasticsearch = "7.15.2"
Flask = "^2.1.1"
python-ffmpeg-video-streaming = "^0.1.15"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
flake8 = "3.9.0"
mypy = "0.931"
wemake-python-styleguide = "0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
